ADD config class
created config class that handles agatha's config values. It contains structures to provde to
different parts of the application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,13 @@ include_directories(${QT_INCLUDE_DIR})
 set(srvAgatha_SRCS
     src/main.cpp
     src/server.cpp
-#     src/config.cpp
+    src/config.cpp
     src/clierrorreporter.cpp
 )
 
 set(srvAgatha_HDRS
     src/server.h
-#     src/config.h
+    src/config.h
 )
 
 qt4_wrap_cpp(srvAgatha_MOC_HDRS ${srvAgatha_HDRS})
