--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,12 @@ add_definitions(-g)
 include_directories(${QT_INCLUDE_DIR})
 
 set(srvAgatha_SRCS
+    src/clierrorreporter.cpp
+    src/config.cpp
+    src/commandexecuter.cpp
+    src/geoipchecker.cpp
     src/main.cpp
     src/server.cpp
-    src/config.cpp
-    src/clierrorreporter.cpp
-    src/geoipchecker.cpp
 )
 
 set(srvAgatha_HDRS
