Add serverAuthChecker class
added class to query Agatha server and check a server's token. This class is not used atm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(srvAgatha_SRCS
     src/main.cpp
     src/server.cpp
     src/checkers/geoipchecker.cpp
+    src/checkers/serverAuthChecker.cpp
 )
 
 set(srvAgatha_HDRS
