First command for the server (WHOIS)
This is half done. Needs some fine tuning and extracting the correct info as couchDB returns extra
info for checks.

Added responseDispatcher class that will be used to return the srvAgatha's response when queried

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set(srvAgatha_SRCS
     src/config.cpp
     src/commandexecuter.cpp
     src/main.cpp
+    src/responsedispatcher.cpp
     src/server.cpp
     src/checkers/geoipchecker.cpp
     src/checkers/serverAuthChecker.cpp
@@ -32,6 +33,7 @@ set(srvAgatha_HDRS
     src/server.h
     src/config.h
     src/commandexecuter.h
+    src/responsedispatcher.h
 )
 
 qt4_wrap_cpp(srvAgatha_MOC_HDRS ${srvAgatha_HDRS})
