created basic webserver
it listens to http requests. To test a request issue "curl -X POST --data "asdasdasdasdasd" <ip>:<port>"

Also adjusted the class to accept the Config::ServerConfigStruct struct for the settings. Fixed emission
of the "ready" signal for the config class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ set(agatha-server_SRCS
     src/main.cpp
     src/responsedispatcher.cpp
     src/server.cpp
+    src/webservice.cpp
     src/checkers/geoipchecker.cpp
     src/checkers/serverAuthChecker.cpp
 )
@@ -36,6 +37,7 @@ set(agatha-server_HDRS
     src/config.h
     src/commandexecuter.h
     src/responsedispatcher.h
+    src/webservice.h
 )
 
 qt4_wrap_cpp(agatha-server_MOC_HDRS ${agatha-server_HDRS})
