changed agatha config file names

--- a/AgathaServerCfg.cfg
+++ b/AgathaServerCfg.cfg
@@ -2,7 +2,7 @@
 #listen port
 port=1337
 
-[couchDb]
+[agathaNode]
 ip=127.0.0.1
 port=5984
-dbName=urbanterror_4_1_1
+databaseName=urbanterror_4_1_1
