added config for couch db

--- a/AgathaServerCfg.cfg
+++ b/AgathaServerCfg.cfg
@@ -2,6 +2,12 @@
 #listen port
 port=1337
 
+# The "master" Agatha server where gameserver admin tokens are stored
+[agathaAuth]
+ip=127.0.0.1
+port=5984
+
+# The Agatha node we refer to for default lookups/mods/etc
 [agathaNode]
 ip=127.0.0.1
 port=5984
